fix: input: ensures there is no visible outline on clear button hover (#63)

--- a/src/components/Inputs/input.module.scss
+++ b/src/components/Inputs/input.module.scss
@@ -253,9 +253,9 @@
         width: 35px;
 
         &:hover {
-            border-color: transparent;
             background-color: transparent;
             color: var(--grey-color-80);
+            outline-color: transparent;
 
             svg {
                 color: var(--grey-color-80);
